refactor: optimize AI Gap Analysis with JSON output mode, technical synonym matching, noise word filtering, and modern Java 21 syntax