@@ -1,6 +1,5 @@
 package com.jobtracker.ats.service;
 
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.MediaType;
@@ -11,73 +10,38 @@ import java.util.List;
 import java.util.Map;
 
 @Service
-@RequiredArgsConstructor
 @Slf4j
 public class OpenAiLlmService {
 
-    @Value("${spring.ai.groq.api-key:demo-dummy-key-for-local-dev}")
-    private String apiKey;
+    private final RestClient restClient;
+    private final String apiKey;
 
-    private final RestClient restClient = RestClient.builder().build();
+    public OpenAiLlmService(
+            RestClient.Builder restClientBuilder,
+            @Value("${spring.ai.groq.api-key:${SPRING_AI_GROQ_API_KEY:}}") String apiKey) {
+        this.restClient = restClientBuilder.build();
+        this.apiKey = apiKey;
+    }
 
-    /**
-     * Trimite o cerere REALĂ către API-ul GROQ (Llama 3.3 70B - Gratuit) sau OpenAI pentru analiza AI Gap.
-     */
-    public String generateRealAiGapReport(String companyName, String jobTitle, String resumeText, String jobDescription) {
-        log.info("🤖 [REAL AI LLM CALL] Trimitere cerere live către modelul LLM pentru {} - {}", companyName, jobTitle);
-
-        if (apiKey == null || apiKey.contains("dummy") || apiKey.isBlank()) {
-            log.warn("⚠️ Nicio cheie API Groq/OpenAI validă găsită în environment. Folosim modul fallback inteligent.");
-            return null;
+    public String generateCompletion(String systemPrompt, String userPrompt) {
+        if (apiKey == null || apiKey.isBlank()) {
+            throw new IllegalStateException("Cheia API Groq (SPRING_AI_GROQ_API_KEY) nu este configurata in mediu.");
         }
 
-        boolean isGroq = apiKey.startsWith("gsk_") || !apiKey.startsWith("sk-");
-        String endpoint = isGroq 
-                ? "https://api.groq.com/openai/v1/chat/completions" 
-                : "https://api.openai.com/v1/chat/completions";
-        
-        String modelName = isGroq ? "llama-3.3-70b-versatile" : "gpt-3.5-turbo";
+        String endpoint = "https://api.groq.com/openai/v1/chat/completions";
 
-        String systemPrompt = """
-                Ești un Expert în Sisteme ATS și Evaluator Tehnic de Cariere.
-                Analizează cu atenție CV-ul candidatului în raport cu Descrierea Jobului oferită.
-                
-                REGULĂ STRICTĂ: FĂRĂ EMOTICOANE SAU EMOJI-URI în tot textul generat (fără simboluri de tip 🎯, ✅, ⚠️, 🚀, ❌, etc.).
-                Răspunde profesional, curat și direct în limba română în format Markdown, folosind următoarea structură:
-
-                # Analiza AI Career Coach: [Titlu Job] la [Companie]
-
-                ## Skill-uri Potrivite Identificate în CV:
-                - (lista skill-urilor găsite efectiv în CV)
-
-                ## Skill-uri Critice Lipsă (Gap Analysis):
-                - (lista cerințelor din job care nu se regăsesc în CV)
-
-                ## Plan de Acțiune Recomandat (3 Zile):
-                1. Ziua 1 (Teorie și Documentație): ...
-                2. Ziua 2 (Exercițiu Practic): ...
-                3. Ziua 3 (Pregătire Interviu Tehnic): ...
-                """;
-
-        String userPrompt = String.format("""
-                DESCRIERE JOB (%s - %s):
-                %s
-                
-                TEXT EXTRASE DIN CV-UL CANDIDATULUI:
-                %s
-                """, companyName, jobTitle, jobDescription, (resumeText != null && !resumeText.isBlank()) ? resumeText : "Candidatul are experiență în Java, Spring Boot, SQL, PostgreSQL, Git, Docker, REST API.");
+        Map<String, Object> requestBody = Map.of(
+                "model", "llama-3.3-70b-versatile",
+                "messages", List.of(
+                        Map.of("role", "system", "content", systemPrompt),
+                        Map.of("role", "user", "content", userPrompt)
+                ),
+                "temperature", 0.2
+        );
 
         try {
-            Map<String, Object> requestBody = Map.of(
-                    "model", modelName,
-                    "messages", List.of(
-                            Map.of("role", "system", "content", systemPrompt),
-                            Map.of("role", "user", "content", userPrompt)
-                    ),
-                    "temperature", 0.2
-            );
-
-            Map response = restClient.post()
+            @SuppressWarnings("unchecked")
+            Map<String, Object> response = restClient.post()
                     .uri(endpoint)
                     .header("Authorization", "Bearer " + apiKey)
                     .contentType(MediaType.APPLICATION_JSON)
@@ -86,19 +50,22 @@ public class OpenAiLlmService {
                     .body(Map.class);
 
             if (response != null && response.containsKey("choices")) {
-                List choices = (List) response.get("choices");
+                @SuppressWarnings("unchecked")
+                List<Map<String, Object>> choices = (List<Map<String, Object>>) response.get("choices");
                 if (!choices.isEmpty()) {
-                    Map firstChoice = (Map) choices.get(0);
-                    Map message = (Map) firstChoice.get("message");
+                    Map<String, Object> firstChoice = choices.getFirst();
+                    @SuppressWarnings("unchecked")
+                    Map<String, Object> message = (Map<String, Object>) firstChoice.get("message");
                     String content = (String) message.get("content");
-                    log.info("✅ [REAL AI LLM CALL SUCCESS] Răspuns curat fără emoticoane primit de la Groq Llama 3.3!");
+                    log.info("[GROQ LLM SUCCESS] Raspuns primit cu succes de la Groq Llama 3.3 70B");
                     return content;
                 }
             }
         } catch (Exception e) {
-            log.error("❌ [REAL AI LLM CALL ERROR] Eroare la apelarea API AI: {}", e.getMessage());
+            log.error("[GROQ LLM ERROR] Eroare la apelul Groq API: {}", e.getMessage());
+            throw new RuntimeException("Eroare la comunicarea cu serviciul AI Groq: " + e.getMessage(), e);
         }
 
-        return null;
+        throw new RuntimeException("Serviciul AI Groq nu a returnat niciun raspuns valid.");
     }
 }
